--- a/templates/base.html
+++ b/templates/base.html
@@ -42,10 +42,9 @@
         {% endblock %}
 
         <content>
-            <div class="container">
+            <div class="hero-img" style="background-image: url('https://cdn.zekkei-japan.jp/images/spots/g8xzqy1v0erg5885i0uewo25wyselax8a.jpg'); background-position: 50% top"></div>
                 {% block body %}
                 {% endblock %}
-            </div>
         </content>
 
         <footer class="ftr">
