--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
 {% block header %}
 
 
-<header role="banner" class="navbar-hotels main-header">
+<header role="banner" class="navbar-hotels">
     <div class="header flex-container">
         <a href="{{ url_for('showHotelCategories') }}" class="logo-link">
             <img src="/static/img/basho_logo.svg" alt="basho logo" title="basho" class="logo"></a>
