--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -191,7 +191,7 @@ header {
 
 // {{ start MAIN CONTENT }}
 .wrap {
-  background: linear-gradient(rgba(#fff, 0), rgba(#000, .5)), url('//media.gettyimages.com/photos/asakura-fuji-sengenjinja-and-mtfuji-picture-id531114971');
+  background: linear-gradient(rgba(#fff, 0), rgba(#000, .5)), url('https://cdn.zekkei-japan.jp/images/spots/g8xzqy1v0erg5885i0uewo25wyselax8a.jpg');
   background-position: center;
   background-size: cover;
 }
@@ -422,6 +422,22 @@ header {
   }
 
   // {{ end HEADER }}
+
+  .wrap {
+    background: none;
+  }
+
+  .hero-img {
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+    min-height: 450px;
+    padding: 50px 0;
+    position: relative;
+    top: -145px;
+    width: 100%;
+    z-index: -1;
+  }
 
   .hotel-img {
     border-radius: 50%;
