--- a/templates/show_hotels.html
+++ b/templates/show_hotels.html
@@ -18,19 +18,20 @@
     {% endif %}
 {% endwith %}
 
-
-<section>
-    <h1 class="page-title">Lodgings</h1>
-    <ul>
-    {% for hotel in hotels %}
-        <li>
-            <a class="hotel name img" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}"><span class="thumbnail hotel-thumbnail" {% if hotel.picture %}style="background-image:url('{{ hotel.picture }}');"{% else %}style="background-image:url('/static/img/Ichotels_hotel_48px.svg');"{% endif %}></span>
-            </a>
-            <h1><a class="hotel hotel-link name-text" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="Show {{ hotel.name }}">{{ hotel.name }}</a></h1>
-        </li>
-    {% endfor %}
-    </ul>
-    <a class="link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
-</section>
+<div class="container">
+    <section>
+        <h1 class="page-title">Lodgings</h1>
+        <ul>
+        {% for hotel in hotels %}
+            <li>
+                <a class="hotel name img" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="{{ hotel.name }}"><span class="thumbnail hotel-thumbnail" {% if hotel.picture %}style="background-image:url('{{ hotel.picture }}');"{% else %}style="background-image:url('/static/img/Ichotels_hotel_48px.svg');"{% endif %}></span>
+                </a>
+                <h1><a class="hotel hotel-link name-text" href="{{ url_for('showHotel', hotel_id=hotel.id) }}" title="Show {{ hotel.name }}">{{ hotel.name }}</a></h1>
+            </li>
+        {% endfor %}
+        </ul>
+        <a class="link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
+    </section>
+</div>
 
 {% endblock %}
