--- a/templates/show_hotels_by_category.html
+++ b/templates/show_hotels_by_category.html
@@ -6,19 +6,21 @@
 
 
 {% block body %}
-<section>
-    <h1 class="page-title heading">{{ category }}s</h1>
+<div class="container">
+    <section>
+        <h1 class="page-title heading">{{ category }}s</h1>
 
-    {% for hotel in hotels %}
-        <h1><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h1>
-        <div class="profile-pic" style="background-image:url({{ creator.picture }})"></div>
-        <p>
-            <a href="{{ url_for('editHotel', hotel_id=hotel.id) }}" title="Edit {{ hotel.name }}" class="btn hotels-btn">Edit</a>
-            <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
-        </p>
-    {% endfor %}
+        {% for hotel in hotels %}
+            <h1><a class="hotel-name" href="{{ url_for('showHotel', hotel_id=hotel.id) }}">{{ hotel.name }}</a></h1>
+            <div class="profile-pic" style="background-image:url({{ creator.picture }})"></div>
+            <p>
+                <a href="{{ url_for('editHotel', hotel_id=hotel.id) }}" title="Edit {{ hotel.name }}" class="btn hotels-btn">Edit</a>
+                <a href="{{ url_for('deleteHotel', hotel_id=hotel.id) }}" title="Delete {{ hotel.name }}" class="btn hotels-btn">Delete</a>
+            </p>
+        {% endfor %}
 
-    <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
-</section>
+        <a class="sub-link" href="{{ url_for('showHotels', hotels=hotels) }}">Back to Lodgings</a>
+    </section>
+</div>
 
 {% endblock %}
