--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -202,7 +202,8 @@ header {
 }
 
 .page-title {
-  margin-bottom: 10px;
+    color: $color-txt-2;
+  margin: 100px 0 0 70px;
 }
 
 .hotel-link {
@@ -437,9 +438,9 @@ header {
     background-size: cover;
     box-sizing: border-box;
     min-height: 450px;
-    padding: 50px 0;
-    position: relative;
-    top: -145px;
+    padding: 0;
+    position: absolute;
+    top: 0;
     width: 100%;
     z-index: -1;
   }
