--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -68,13 +68,23 @@ ul {
   padding: 0;
 }
 
+a {
+    color: $color-bg-1;
+    text-decoration: none;
+
+    &:hover {
+      background-color: inherit;
+      color: color-bg-1;
+      text-decoration: none;
+    }
+}
+
 li {
   list-style: none;
 
   & > a {
     background-color: transparent;
     color: $color-bg-1;
-    text-decoration: none;
 
     &:hover {
       background-color: inherit;
@@ -173,6 +183,7 @@ header {
   }
 
   .hdr-icon {
+    color: color-bg-1;
     display: flex;
     float: right;
     margin-bottom: auto;
@@ -437,7 +448,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     box-sizing: border-box;
-    min-height: 450px;
+    min-height: 200px;
     padding: 0;
     position: absolute;
     top: 0;
