--- a/templates/header.html
+++ b/templates/header.html
@@ -41,11 +41,7 @@
 <script>
 function hdrFunction() {
     var x = document.getElementById("hdrNavbar");
-    if (x.className === "flex-container navbar") {
-        x.className += " visible";
-    } else {
-        x.className = "flex-container navbar";
-    }
+        x.classList.toggle("visible");
 }
 </script>
 
