--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -351,10 +351,10 @@ header {
       display: block;
       height: 100vh;
       position: absolute;
-      right: -306px;
+      right: -228px;
       top: 0;
       transition: .2s ease-in-out;
-      width: 300px;
+      width: 220px;
       z-index: 1;
 
       ul {
@@ -388,7 +388,7 @@ header {
     }
 
     .navbar.visible {
-      transform: translateX(-306px);
+      transform: translateX(-228px);
     }
   }
 
@@ -448,7 +448,7 @@ header {
     background-repeat: no-repeat;
     background-size: cover;
     box-sizing: border-box;
-    min-height: 200px;
+    min-height: 60vh;
     padding: 0;
     position: absolute;
     top: 0;
