--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,9 +187,11 @@ header .hdr-icon {
   border-radius: 3px;
   box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5);
   color: #000;
-  display: block;
-  height: 400px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  justify-content: space-between;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -203,6 +205,7 @@ header .hdr-icon {
   margin-right: auto;
   position: relative;
   top: -20px;
+  left: 10px;
   width: 200px; }
 
 .signin-title {
@@ -223,11 +226,11 @@ header .hdr-icon {
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5);
   color: #fff;
   position: relative;
-  top: 200px; }
+  bottom: 50px; }
 
 .signin-result {
   position: relative;
-  top: 40px; }
+  top: 0; }
   .signin-result img {
     margin-left: auto;
     margin-right: auto; }
