--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -275,9 +275,11 @@ header {
   border-radius: 3px;
   box-shadow: 1px 1px 3px 1px rgba($color-txt-1, .5);
   color: $color-txt-1;
-  display: block;
-  height: 400px;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  justify-content: space-between;
+  align-items: center;
   margin-left: auto;
   margin-right: auto;
   position: relative;
@@ -292,6 +294,7 @@ header {
   margin-right: auto;
   position: relative;
   top: -20px;
+  left: 10px;
   width: 200px;
 }
 
@@ -314,12 +317,12 @@ header {
   box-shadow: 1px 1px 1px rgba($color-txt-1, .5);
   color: $color-txt-2;
   position: relative;
-  top: 200px;
+  bottom: 50px;
 }
 
 .signin-result {
   position: relative;
-  top: 40px;
+  top: 0;
 
   img {
     margin-left: auto;
